--- a/sadklouds.FlashCardsApp/FlashCardsLibrary/App.config
+++ b/sadklouds.FlashCardsApp/FlashCardsLibrary/App.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name ="Default"  
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FlashCardsDB"
-			 providerName="Microsoft.Data.SqlClient"/>
+		<add name ="flashcardsDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FlashCardsDB" providerName="Microsoft.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
