--- a/Flashcards.CoreyJordan/Flashcards.CoreyJordan/App.Config
+++ b/Flashcards.CoreyJordan/Flashcards.CoreyJordan/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="FlashCardsDB" connectionString="Server=(localdb)\LocalDbDemo; Integrated Security=true;"/>
+		<add name="FlashCardsDB" connectionString="Server=(localdb)\LocalDbDemo; Integrated Security=true;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
