Add CreateDeck() and Wire crud logic
Connected to database (What a PITA!)

--- a/Flashcards.CoreyJordan/Flashcards.CoreyJordan/App.Config
+++ b/Flashcards.CoreyJordan/Flashcards.CoreyJordan/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="FlashCardsDB" connectionString="Server=(localdb)\LocalDbDemo; Integrated Security=true;" providerName="System.Data.SqlClient"/>
+		<add name="FlashCardsDB" connectionString="Server=(localdb)\LocalDbDemo; Integrated Security=true; AttachDbFileName=E:\Projects\C_Sharp_Academy\CodeReviews.Console.Flashcards\Flashcards.CoreyJordan\Flashcards.CoreyJordan\bin\Debug\net7.0\FlashCards_Db.mdf;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
