--- a/Flashcards.CoreyJordan/Flashcards.CoreyJordan/Flashcards.CoreyJordan.csproj
+++ b/Flashcards.CoreyJordan/Flashcards.CoreyJordan/Flashcards.CoreyJordan.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FlashcardsLibrary\FlashcardsLibrary.csproj" />
   </ItemGroup>
 
