From scratch refactor: Add models

--- a/Flashcards.CoreyJordan/FlashcardsLibrary/FlashcardsLibrary.csproj
+++ b/Flashcards.CoreyJordan/FlashcardsLibrary/FlashcardsLibrary.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Console\" />
+    <Folder Include="Controller\" />
+  </ItemGroup>
+
 </Project>
