build[nuget]: install Configuration Manager package

--- a/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
+++ b/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
@@ -8,4 +8,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
 </Project>
