--- a/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/App.Config
+++ b/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <configuration>
     <appSettings>
-        <add key="connectionString" value="Server=tcp:127.0.0.1,1433;Database=Flashcard;User=SA;Password=YourStrong@Passw0rd;" />
+        <add key="connectionString" value="Server=127.0.0.1,1433;Initial Catalog=Flashcards;User ID=SA;Password=YourStrong@Passw0rd;Trust Server Certificate=True;" />
     </appSettings>
 </configuration>
