feat[FlashcardStackRepository]:  add get all and get by name methods

--- a/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
+++ b/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
@@ -14,8 +14,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="DAL\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAL\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
