--- a/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
+++ b/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no/Flashcards.MartinL-no.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="DAL\" />
