--- a/FlashCards.Forser/appsettings.json
+++ b/FlashCards.Forser/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "FlashcardDBContext": {
-      "ConnectionString": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FlashCards;Integrated Security=SSPI;AttachDBFilename=D:\\Projects\\CSharpAcademy\\CodeReviews.Console.Flashcards\\FlashCards.Forser\\FlashCards.mdf"
+    "ConnectionStrings": {
+      "MSSQL": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FlashCards;Integrated Security=SSPI;AttachDBFilename=D:\\Projects\\CSharpAcademy\\CodeReviews.Console.Flashcards\\FlashCards.Forser\\FlashCards.mdf"
     }
 }
