--- a/Flashcards.wkktoria/Flashcards.wkktoria/Flashcards.wkktoria.csproj
+++ b/Flashcards.wkktoria/Flashcards.wkktoria/Flashcards.wkktoria.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview3.23201.1"/>
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0"/>
     </ItemGroup>
 
