--- a/FlashCards.Ibrahim/FlashCards.Ibrahim/appsettings.json
+++ b/FlashCards.Ibrahim/FlashCards.Ibrahim/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
+        "DefaultConnection": "Server=(LocalDB)\\LocalDB_Flashcard;Integrated Security=True;",
         "FlashcardDb": "Server=(LocalDB)\\LocalDB_Flashcard;Database=MyFlashcardDb;Trusted_Connection=True;"
     }
 }
