Fix Delete stack bug

--- a/FlashCards.ManuelE-Osorio/Flashcards/App.config
+++ b/FlashCards.ManuelE-Osorio/Flashcards/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="PopulateDB" value="True"/>
+        <add key="PopulateDB" value="False"/>
     </appSettings>
     <connectionStrings>
         <add name="FlashCardsConnectionString" 
