--- a/Flashcards.StanimalTheMan/Flashcards.StanimalTheMan/Flashcards.StanimalTheMan.csproj
+++ b/Flashcards.StanimalTheMan/Flashcards.StanimalTheMan/Flashcards.StanimalTheMan.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.48.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
