--- a/Flashcards.frockett/Flashcards.frockett/Flashcards.frockett.csproj
+++ b/Flashcards.frockett/Flashcards.frockett/Flashcards.frockett.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
