--- a/Buutyful.FlashCards/Buutyful.FlashCards/Buutyful.FlashCards.csproj
+++ b/Buutyful.FlashCards/Buutyful.FlashCards/Buutyful.FlashCards.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="State\Card\" />
+  </ItemGroup>
+
 </Project>
