stacks and flashcards can be saved to the database

--- a/czerviik.FlashCards/appsettings.json
+++ b/czerviik.FlashCards/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;User Id=sa;Password=dockerStrongPwd123;",
+        "DefaultConnection": "Server=localhost,1433;User Id=sa;Password=dockerStrongPwd123;Encrypt=False",
         "FileName": "flashcards.db"
     }
 }
