--- a/Flashcards.kronyer/Flashcards/Flashcards.csproj
+++ b/Flashcards.kronyer/Flashcards/Flashcards.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="Spectre.Console" Version="0.48.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
