--- a/Flashcards.kronyer/Flashcards/Properties/launchSettings.json
+++ b/Flashcards.kronyer/Flashcards/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Flashcards": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\pedro\\OneDrive\\Área de Trabalho\\Journey\\Flashcards.kronyer\\Flashcards\\"
+      "workingDirectory": "C:\\Users\\pedro\\OneDrive\\Área de Trabalho\\Journey\\Flashcards_ConsoleApp\\Flashcards"
     }
   }
 }
