fixed suggestions. database and tables now creating when not existing

--- a/Flashcards.JaegerByte/App.config
+++ b/Flashcards.JaegerByte/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key ="ConnectionString" value = "Server=localhost;Database=master;Trusted_Connection=True;Initial Catalog=FlashcardsDB"/>
+    <add key ="ConnectionString" value = "Server=localhost;Database=master;Trusted_Connection=True;Initial Catalog="/>
+    <add key ="DatabaseName" value = "FlashcardsDB"/>
   </appSettings>
 </configuration>
