updated for comments

--- a/Flashcards.DouglasFir/Flashcards/App.config
+++ b/Flashcards.DouglasFir/Flashcards/App.config
@@ -2,20 +2,20 @@
 <configuration>
 	<appSettings>
 		<!--' Database Constants | Database, Table, and View names '-->
-		<add key="DbName" value="FLASHCARDS" />
-		<add key="TblStackName" value="tb_Stacks" />
-		<add key="TblFlashCardsName" value="tb_FlashCards" />
-		<add key="TblStudySessionsName" value="tb_StudySessions" />
-		<add key="VwFlashCardsName" value="vw_FlashCardsDisplay" />
-		<add key="VwStudySessionsName" value="vw_StudySessionsWithStacks" />
-		<add key="VwFlashCardsRenumberedName" value="vw_FlashCardsRenumbered" />
+		<add key="DatabaseName" value="FLASHCARDS" />
+		<add key="TableNameStack" value="tb_Stacks" />
+		<add key="TableNameFlashCards" value="tb_FlashCards" />
+		<add key="TableNameStudySessions" value="tb_StudySessions" />
+		<add key="ViewNameFlashCards" value="vw_FlashCardsDisplay" />
+		<add key="ViewNameStudySessions" value="vw_StudySessionsWithStacks" />
+		<add key="ViewNameFlashCardsRenumbered" value="vw_FlashCardsRenumbered" />
 
 		<!--' Spectre Console Menu Constants '-->
 		<add key="MenuTitle" value="Select an option:" />
 		<add key="PageSize" value ="10"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="dbMasterConnectionString" connectionString="Server=(local);Database=master;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-		<add name="dbFlashCardsConnectionString" connectionString="Server=(local);Database=FLASHCARDS;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+		<add name="DatabaseMasterConnectionString" connectionString="Server=(local);Database=master;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+		<add name="DatabaseFlashCardsConnectionString" connectionString="Server=(local);Database=FLASHCARDS;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
