Added database creation and handling

--- a/FlashCards.obitom67/FlashCards.obitom67/App.config
+++ b/FlashCards.obitom67/FlashCards.obitom67/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="key1" value="Data Source=(localdb)\LocalDBDemo;Initial Catalog=FlashCards;Integrated Security=False;Encrypt=False" />
+		<add key="connectionString" value="Data Source=(localdb)\LocalDBDemo;Integrated Security=False;Encrypt=False" />
 	</appSettings>
 </configuration>
