--- a/Flashcards.UndercoverDev/Flashcards.UndercoverDev/Flashcards.UndercoverDev.csproj
+++ b/Flashcards.UndercoverDev/Flashcards.UndercoverDev/Flashcards.UndercoverDev.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
