--- a/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
+++ b/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
@@ -8,4 +8,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Data Access Layer\" />
+      <Folder Include="DTOs\" />
+      <Folder Include="Models\" />
+      <Folder Include="Services\" />
+      <Folder Include="User Interface\" />
+      <Folder Include="Utilities\" />
+    </ItemGroup>
+
 </Project>
