Added other functionality

--- a/Flashcards.javedkhan2k2/Flashcards.javedkhan2k2/App.config
+++ b/Flashcards.javedkhan2k2/Flashcards.javedkhan2k2/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ConnectionString" value="Server=localhost,1433;Database=Flashcards1; User Id=SA; Password=ghost@123;TrustServerCertificate=True" />
+        <add key="ConnectionString" value="Server=localhost,1433;Database=Flashcards; User Id=SA; Password=ghost@123;TrustServerCertificate=True" />
     </appSettings>
 </configuration>
