--- a/Flashcards.javedkhan2k2/Flashcards.javedkhan2k2/App.config
+++ b/Flashcards.javedkhan2k2/Flashcards.javedkhan2k2/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="ConnectionString" value="PleaseEnteryourconnection" />
+        <add key="ConnectionString" value="" />
     </appSettings>
 </configuration>
