--- a/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
+++ b/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
@@ -9,19 +9,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Data Access Layer\" />
+      <Folder Include="Data Access\" />
       <Folder Include="DTOs\" />
       <Folder Include="Models\" />
       <Folder Include="Services\" />
-      <Folder Include="User Interface\" />
-      <Folder Include="Utilities\" />
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.1.35" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-      <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     </ItemGroup>
 
 </Project>
