Add new models and data context
Implemented new models for Flashcard, Stack and StudySession in the 'Models' namespace. A new DbContext named 'FlashcardContext' was also created under the 'Data_Access' namespace, which includes DbSets for these three models and overrides the 'OnConfiguring' method. The 'appsettings.json' file has been updated for copy to the output directory.

--- a/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
+++ b/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
@@ -9,9 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Data Access\" />
       <Folder Include="DTOs\" />
-      <Folder Include="Models\" />
       <Folder Include="Services\" />
       <Folder Include="Controllers\" />
     </ItemGroup>
@@ -23,6 +21,12 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
