Refactor flashcards application from EF Core to Dapper
Replaced Entity Framework Core data access with Dapper for improved performance and finer control. Made changes in data, service, and UI layers to use Dapper for data operations, adjusted the configuration, and redesigned relevant classes as per these modifications. Also, simplified the models and added DTO classes for improved separation of concerns.

--- a/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
+++ b/Flashcards.kalsson/Flashcards.kalsson/Flashcards.kalsson.csproj
@@ -9,18 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs\" />
-      <Folder Include="Services\" />
-      <Folder Include="Controllers\" />
+      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+      <PackageReference Include="Spectre.Console" Version="0.49.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+      <Folder Include="Utilities\" />
     </ItemGroup>
 
     <ItemGroup>
