--- a/Flashcards.kalsson/Flashcards.kalsson/appsettings.json
+++ b/Flashcards.kalsson/Flashcards.kalsson/appsettings.json
@@ -1,6 +1,6 @@
-{
+﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FlashcardDB;Trusted_Connection=True;"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FlashcardsDb;Trusted_Connection=True;"
     },
     "Logging": {
         "LogLevel": {
