--- a/Flashcards/App.config
+++ b/Flashcards/App.config
@@ -5,5 +5,6 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=FlashcardsDb;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="MasterConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=master;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
