Rename database, various seeding fixes

--- a/FlashCards.Johay90/Flashcards/App.config
+++ b/FlashCards.Johay90/Flashcards/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="DatabaseName" value="FlashcardsDb"/>
+    <add key="DatabaseName" value="FlashcardsDb_Johay90"/>
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=FlashcardsDb;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=FlashcardsDb_Johay90;Integrated Security=True;" providerName="System.Data.SqlClient"/>
     <add name="MasterConnection" connectionString="Server=(localdb)\MSSQLLocalDB;Database=master;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
