Lint:fix pascal casing & make default db name more unique

--- a/Console.Flashcards.ananttuli/FlashcardsProgram/appsettings.json
+++ b/Console.Flashcards.ananttuli/FlashcardsProgram/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "Name": "FlashcardsDBNFNT",
+    "Name": "FlashcardsDBNFNTAT",
     "Host": "(localdb)\\MSSQLLocalDB"
   }
 }
