--- a/Flashcards.breno085/app.config
+++ b/Flashcards.breno085/app.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Server=localhost,1433;Database=Flashcards;User Id=sa;Password=S3cureP@ssw0rd2024#;TrustServerCertificate=true" />
+    <add key="ConnectionString" value="Server=localhost,1433;Database=Flashcards;User Id=sa;Password=1q2w3e4r@#$;TrustServerCertificate=true" />
   </appSettings>
 </configuration>
