--- a/Flashcards.Bkohler93/Flashcards.Console/App.config
+++ b/Flashcards.Bkohler93/Flashcards.Console/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="sqlConnectionString" value="Server=localhost; Database=Flashcards; TrustServerCertificate=True; User Id=SA; Password=Password1231; Encrypt=False" />
+        <add key="sqlConnectionString" value="Server=172.25.96.1; Database=Flashcards; TrustServerCertificate=True; User Id=brett; Password=password; Encrypt=False" />
     </appSettings>
 </configuration>
