--- a/Flashcards.Bkohler93/Flashcards.Console/Flashcards.Console.csproj
+++ b/Flashcards.Bkohler93/Flashcards.Console/Flashcards.Console.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
