--- a/Flashcards.Bkohler93/Flashcards.Console/example.App.config
+++ b/Flashcards.Bkohler93/Flashcards.Console/example.App.config
@@ -2,5 +2,6 @@
 <configuration>
     <appSettings>
         <add key="sqlConnectionString" value="Server=localhost; Database=Flashcards; TrustServerCertificate=True; User Id=SA; Password=Password1231; Encrypt=False" />
+        <add key="sqlConnectionString" value="Server=172.25.96.1; Database=Flashcards; TrustServerCertificate=True; User Id=brett; Password=password; Encrypt=False" />
     </appSettings>
 </configuration>
