--- a/Flashcards.Bkohler93/Flashcards.Console/Flashcards.Console.csproj
+++ b/Flashcards.Bkohler93/Flashcards.Console/Flashcards.Console.csproj
@@ -6,6 +6,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 
