Fixed couple of bugs and added functionality for incorrect connection string. Added READ.ME file.

--- a/Flashcards.Arashi256/App.config
+++ b/Flashcards.Arashi256/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <!-- Please replace the connection string with your own SQL Server instance IP, database name and credentials -->
+    <!-- Please replace the connection strings with your own SQL Server instance IP, database name and credentials -->
+    <!-- Database must exist, although it can have no tables present -->
     <add key="ConnectionString" value="Server=192.168.1.57;Database=FLASHCARD;Trusted_Connection=True;TrustServerCertificate=True;User Id=flashcarduser;Password=!!flashcard36;Integrated Security=False;"/>
   </appSettings>
 </configuration>
