--- a/FlashCards.kwm0304/FlashCards.kwm0304.csproj
+++ b/FlashCards.kwm0304/FlashCards.kwm0304.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
