--- a/FlashCards.kwm0304/appsettings.json
+++ b/FlashCards.kwm0304/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=localdb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=localdb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
