--- a/kAntonelli22.Flashcards/App.config
+++ b/kAntonelli22.Flashcards/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="DatabasePath" value="(LocalDb)\LocalDB"/>
-		<add key="ConnectionString" value="Server=(LocalDb)\LocalDB;database=FlashcardDB;Trusted_Connection=True;"/>
+		<add key="ConnectionString" value="Server=(LocalDb)\LocalDB;Trusted_Connection=True;"/>
 	</appSettings>
 </configuration>
