add study session feature

--- a/FlashCards.thomas-henley/FlashCards/FlashCards/appsettings.json
+++ b/FlashCards.thomas-henley/FlashCards/FlashCards/appsettings.json
@@ -7,7 +7,7 @@
     
     "Serilog": {
         "MinimumLevel": {
-            "Default": "Information",
+            "Default": "Error",
             "Override": {
                 "Microsoft": "Information",
                 "System": "Warning"
