creates db and tables on start

--- a/Flashcards.SCM42/app.config
+++ b/Flashcards.SCM42/app.config
@@ -2,6 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="Flashcards" connectionString="Server=(localdb)\MSSQLLocalDB;Database=FlashcardsDB;Trusted_Connection=True;" providerName="Microsoft.Data.SqlClient"/>
-    <add name="Sessions" connectionString="Server=(localdb)\MSSQLLocalDB;Database=StudySessionDB;Trusted_Connection=True;" providerName="Microsoft.Data.SqlClient"/>
+    <add name="Master" connectionString="Server=(localdb)\MSSQLLocalDB;Database=master;Trusted_Connection=True;" providerName="Microsoft.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
