--- a/Flashcards.Eddyfadeev/Flashcards.Eddyfadeev/appsettings.json
+++ b/Flashcards.Eddyfadeev/Flashcards.Eddyfadeev/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=Flashcards; Integrated Security=true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Integrated Security=true;"
   }
 }
