--- a/Flashcards.Eddyfadeev/Flashcards.Eddyfadeev/appsettings.json
+++ b/Flashcards.Eddyfadeev/Flashcards.Eddyfadeev/appsettings.json
@@ -1,5 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Integrated Security=true;"
+  },
+  "DatabaseName": {
+    "DefaultDbName" : "Flashcards"
   }
 }
