--- a/Flashcards.fgaspar17/FlashcardsLibrary/FlashcardsLibrary.csproj
+++ b/Flashcards.fgaspar17/FlashcardsLibrary/FlashcardsLibrary.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="DatabaseScript.sql">
+    <None Update="DatabaseScript.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
