GitGuardian error solved

--- a/Flash-Cards.Lawang/app.config
+++ b/Flash-Cards.Lawang/app.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
    <connectionStrings>
-      <add name="Sql" connectionString="Data Source=localhost;Initial Catalog=FlashCards_db;User Id=sa;Password=Lawang@21s;TrustServerCertificate=true" />
+      <add name="Sql" connectionString="Data Source=localhost;Initial Catalog=FlashCards_db;User Id=sa;Password=YOUR_PASSWORD;TrustServerCertificate=true" />
    </connectionStrings>
 </configuration>
