Database name variable

--- a/Flashcards.fgaspar17/Flashcards/appsettings.json
+++ b/Flashcards.fgaspar17/Flashcards/appsettings.json
@@ -1,8 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\flashcards;Integrated Security=True;Initial Catalog=flashcardsdb",
-        "SetupConnection": "Server=(localdb)\\flashcards;Integrated Security=True;"
-    },
-
-    "CancelString": "c"
+  "ConnectionStrings": {
+    "SetupConnection": "Server=(localdb)\\your_localdb_instance;Integrated Security=True;"
+  },
+  "DatabaseName": "your_database_name",
+  "CancelString": "c"
 }
