--- a/Console.Flashcards.mefdev/FlashcardApp.Core/FlashcardApp.Core.csproj
+++ b/Console.Flashcards.mefdev/FlashcardApp.Core/FlashcardApp.Core.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+  </ItemGroup>
+
+
+<ItemGroup>
+    <None Remove="Repositories\" />
+    <None Remove="Interfaces\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
 </Project>
