-Redefined way of passing db connecting string' made database a static class - Modified connectrion string -Added db creation sql file

--- a/Flashcards.empty-codes/Flashcards.empty-codes.csproj
+++ b/Flashcards.empty-codes/Flashcards.empty-codes.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
