--- a/Flashcards.empty-codes/appsettings.json
+++ b/Flashcards.empty-codes/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "FlashcardsDb": "Data Source=(localdb);Initial Catalog=myFlashCardsDb;Integrated Security=True"
+    "FlashcardsDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=myFlashCardsDb;Integrated Security=True;"
   },
+
   "exclude": [
     "**/bin",
     "**/bower_components",
