--- a/Flashcards.ngalantino/Flashcards.ngalantino/Flashcards.ngalantino.csproj
+++ b/Flashcards.ngalantino/Flashcards.ngalantino/Flashcards.ngalantino.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
