--- a/FlashCards/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards/FlashCards.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FlashCardsLibrary\FlashCardsLibrary.csproj" />
   </ItemGroup>
 
