--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,11 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\localdb;Database=db;Trusted_Connection=True;"
+     "ConnectionStrings": {
+      "DefaultConnection": "Server=(localdb)\\localdb;Database=db;Trusted_Connection=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    }
   }
-}
