--- a/appsettings.json
+++ b/appsettings.json
@@ -4,8 +4,9 @@
     },
     "Logging": {
       "LogLevel": {
-        "Default": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+        "Default": "None",
+        "Microsoft.EntityFrameworkCore": "None",
+        "Microsoft.EntityFrameworkCore.Update": "None"
       }
     }
   }
