--- a/FlashcardGame/FlashcardGame/App.config
+++ b/FlashcardGame/FlashcardGame/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="Dbtest"
-		     connectionString="Server=.;Database=Dbtest;Trusted_Connection=True;TrustServerCertificate=True;"
+		<add name="FlashcardDatabase"
+		     connectionString="Server=.;Database=master;Trusted_Connection=True;TrustServerCertificate=True;"
 		     providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
