--- a/FlashCards.HarryJLeigh/FlashCards/FlashCards.csproj
+++ b/FlashCards.HarryJLeigh/FlashCards/FlashCards.csproj
@@ -9,9 +9,9 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.0-preview3.24332.3" />
       <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.50" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
-      <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
       <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
     </ItemGroup>
 
