--- a/Flashcards.Bina28/app.config
+++ b/Flashcards.Bina28/app.config
@@ -1,9 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-<connectionStrings>
-	<add name="DefaultConnection"
-         connectionString="Data Source=(localdb)\LocalDBDemo;Initial Catalog=DB;Integrated Security=True;
-"
-         providerName="System.Data.SqlClient" />
-</connectionStrings>
-	</configuration>
+﻿<configuration>
+	<appSettings>
+		<add key="ConnectionString" value="Data Source=(localdb)\LocalDBDemo;Initial Catalog=DB;Integrated Security=True;" />
+	</appSettings>
+</configuration>
