--- a/Flashcards.Bina28/Flashcards.Bina28.csproj
+++ b/Flashcards.Bina28/Flashcards.Bina28.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
  
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+ 
+	  <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
 
   </ItemGroup>
 
