Created App.Config File

--- a/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka.csproj
+++ b/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Views\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
