Creates DB FlashCards if it does not exist.

--- a/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/App.config
+++ b/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/App.config
@@ -3,6 +3,7 @@
 
 		<appSettings>
 			<add key ="ConnectionString" value="Server=(LocalDB)\FlashCards;Database=FlashCardsDB;Trusted_Connection=True;" />
+			<add key ="DBCreationString" value="Server=(LocalDB)\FlashCards;Database=;Trusted_Connection=True;" />
 		</appSettings>
 		
 	</configuration>
