--- a/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka.csproj
+++ b/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka.csproj
@@ -10,13 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="DTO\" />
-    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
