Project updated as per review.

--- a/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/App.config
+++ b/Flashcards.AshtonLeeSeloka/Flashcards.AshtonLeeSeloka/App.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 	<configuration>
-
 		<appSettings>
-			<add key ="ConnectionString" value="Server=(LocalDB)\FlashCards;Database=FlashCardsDB;Trusted_Connection=True;" />
+			<add key ="ConnectionString" value="Server=(LocalDB)\FlashCards;Database=FlashCards_AshtonLeeSeloka;Trusted_Connection=True;" />
 			<add key ="DBCreationString" value="Server=(LocalDB)\FlashCards;Database=;Trusted_Connection=True;" />
 		</appSettings>
-		
 	</configuration>
