Add create db if not exists

--- a/Flashcards.kimchi-bro/appsettings.json
+++ b/Flashcards.kimchi-bro/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\Flashcards;Database=FlashcardDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FlashcardDB;Integrated Security=True;TrustServerCertificate=True;"
   }
 }
