init of created files so far

--- a/Flashcards.DreamFXX/appsettings.json
+++ b/Flashcards.DreamFXX/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-Q57TOVH; Initial Catalog=flascards_DreamFXX_Data; Integrated Security=True; Encrypt=False; Trust Server Certificate=True; Application Intent=ReadWrite; Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=DESKTOP-Q57TOVH; Initial Catalog=FlashCards_Data; Integrated Security=True; Encrypt=False; Trust Server Certificate=True; Application Intent=ReadWrite; Multi Subnet Failover=False"
   }
 }
