--- a/FunRun.Flashcards/FunRun.Flashcards/FunRun.Flashcards.csproj
+++ b/FunRun.Flashcards/FunRun.Flashcards/FunRun.Flashcards.csproj
@@ -18,8 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controller\" />
-    <Folder Include="Services\" />
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
