Updated solution structure. Tried to improve user experience. Updated missing ID requirement, by showing a presentationID instead of the actual ID. Made a constant DBNAME, so it is now possible to set the database name in program.cs.

--- a/Flashcards.jollejonas/Flashcards.jollejonas/Properties/appsettings.json
+++ b/Flashcards.jollejonas/Flashcards.jollejonas/Properties/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Flashcards;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database={DBNAME};Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
