--- a/Flashcards.nikosnick13/Flashcards.nikosnick13.csproj
+++ b/Flashcards.nikosnick13/Flashcards.nikosnick13.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
