program.cs changed to better Depen. inj.

--- a/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Flashcards.Dreamfxx.csproj
+++ b/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Flashcards.Dreamfxx.csproj
@@ -19,8 +19,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
     <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="Spectre.Console.Extensions.Table" Version="1.0.0" />
   </ItemGroup>
