Přidání třídy StackDto a vylepšení konfigurace
Byla přidána třída `StackDto` do souboru `StackDto.cs` s povinnými vlastnostmi `Name` a `Description`.

Do projektu byla přidána reference na balíček `Microsoft.Extensions.Logging.Console`.

V souboru `Program.cs` byl přidán import pro `Microsoft.Extensions.Logging`, upraveny komentáře a vylepšena chybová hláška pro připojovací řetězec `DefaultConnection`.

V souboru `appsettings.json` byl aktualizován připojovací řetězec `DefaultConnection`, aby odkazoval na databázi `FlashcardsDB`.

--- a/Flashcards.Dreamfxx/Flashcards.Dreamfxx/appsettings.json
+++ b/Flashcards.Dreamfxx/Flashcards.Dreamfxx/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-Q57TOVH;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;"
+    "DefaultConnection": "Data Source=DESKTOP-Q57TOVH;Initial Catalog=FlashcardsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;"
   }
 }
