setup sql server communication properly

--- a/app.config
+++ b/app.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-        <add key="connectionString" value="Server=localhost,1433;Database=FlashcardsData;User Id=testuser;Password=testpassword;TrustServerCertificate=True;" />
+        <add key="masterConnectionString" value="Server=(localdb)\MSSQLLocalDB;Integrated Security=true;" />
+        <add key="databaseName" value="FlashcardsData" />
+        <add key="dbConnectionString" value="Server=(localdb)\MSSQLLocalDB;Integrated Security=True;Database=FlashcardsData;" />
     </appSettings>
 </configuration>
