Adding functionality add and view stacks

--- a/Flashcards.RyanW84/Flashcards.RyanW84.csproj
+++ b/Flashcards.RyanW84/Flashcards.RyanW84.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
