Refactor the solution

--- a/FlashCards.pkrzysiekk/App.config
+++ b/FlashCards.pkrzysiekk/App.config
@@ -5,11 +5,10 @@
 			 providerName="System.Data.SqlClient" />
 		<add name="ConnectionString"
 			 connectionString="Server=(localdb)\MSSQLLocalDB;Database=Flashcards;Trusted_Connection=True;"
-			 providerName="System.Data.SqlClient"
-			 />
+			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
-		<add key="createDB" value="IF NOT EXISTS (SELECT name FROM sys.databases WHERE name = 'Flashcards') BEGIN     CREATE DATABASE Flashcards;END"/>
+		<add key="createDB" value="IF NOT EXISTS (SELECT name FROM sys.databases WHERE name = 'Flashcards') BEGIN     CREATE DATABASE Flashcards;END" />
 		<add key="createTables" value=" USE Flashcards;
 
           IF NOT EXISTS (SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'stacks')
@@ -19,7 +18,7 @@
                   Name NVARCHAR(255) UNIQUE NOT NULL
               );
           END;
-          
+
           IF NOT EXISTS (SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'cards')
           BEGIN
               CREATE TABLE cards (
@@ -30,7 +29,7 @@
                   CONSTRAINT FK_cards_stacks FOREIGN KEY (StackId) REFERENCES stacks(Id) ON DELETE CASCADE
               );
           END;
-          
+
           IF NOT EXISTS (SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'sessions')
           BEGIN
               CREATE TABLE sessions (
