Finishing off CRUD functions

--- a/Flashcards.RyanW84/Properties/launchSettings.json
+++ b/Flashcards.RyanW84/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Flashcards.RyanW84": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Ryan\\OneDrive\\Documents\\GitHub\\CodeReviews.Console.Flashcards\\Flashcards.RyanW84"
+      "workingDirectory": "C:\\Users\\Ryanw\\OneDrive\\Documents\\GitHub\\CodeReviews.Console.Flashcards\\Flashcards.RyanW84"
     }
   }
 }
