--- a/CodeReviews.Console.Flashcards/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Properties/launchSettings.json
+++ b/CodeReviews.Console.Flashcards/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Flashcards.Dreamfxx": {
       "commandName": "Project",
       "sqlDebugging": true,
-      "nativeDebugging": true,
+      "nativeDebugging": false,
       "jsWebView2Debugging": false
     }
   }
