--- a/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Flashcards.Dreamfxx.csproj
+++ b/Flashcards.Dreamfxx/Flashcards.Dreamfxx/Flashcards.Dreamfxx.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<ProductName>Flashcards.Dreamfxx</ProductName>
 		<OutputType>Exe</OutputType>
-		<TargetFramework></TargetFramework>
+		<TargetFramework>9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
