--- a/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/appsettings.json
+++ b/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/appsettings.json
@@ -1,12 +1,6 @@
 {
   "ConnectionStrings": {
-    "Data Source=(localdb)\\MSSQLLocalDB;Database=FlashcardsDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=FlashcardsDB;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
+  }
 }
+
