base project done minus Study

--- a/FlashCards/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards/FlashCards.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
