--- a/FlashCards/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards/FlashCards.csproj
@@ -16,6 +16,9 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.WebEncoders" Version="9.0.3" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
