--- a/Flashcards.csproj
+++ b/Flashcards.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="Spectre.Console.Extensions" Version="0.1.0" />
   </ItemGroup>
 
 </Project>
