--- a/SpirosZoupas.Console.Flashcards/SpirosZoupas.Console.Flashcards.csproj
+++ b/SpirosZoupas.Console.Flashcards/SpirosZoupas.Console.Flashcards.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+    <PackageReference Include="Spectre.Console" Version="0.50.0" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.50.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.4" />
   </ItemGroup>
 
