--- a/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/.vscode/launch.json
+++ b/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/.vscode/launch.json
@@ -14,8 +14,11 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
-            "stopAtEntry": false
+            "console": "externalTerminal",
+            "stopAtEntry": false,
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
         },
         {
             "name": ".NET Core Attach",
