--- a/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX.csproj
+++ b/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+    <PackageReference Include="Sentry.AspNetCore" Version="5.5.1" />
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
   </ItemGroup>
 
