--- a/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/appsettings.json
+++ b/FlashcardsAssist.DreamFXX/FlashcardsAssist.DreamFXX/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=FlashcardsDB;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
+    "DefaultConnection": "Data Source=DREAMFXCK-PC;Database=FlashcardsDB;TrustServerCertificate=True;Integrated Security=True;Encrypt=False;MultipleActiveResultSets=False;"
   }
 }
 
