--- a/Flashcards.KamilKolanowski/Flashcards.KamilKolanowski.csproj
+++ b/Flashcards.KamilKolanowski/Flashcards.KamilKolanowski.csproj
@@ -20,6 +20,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Remove="README.md" />
   </ItemGroup>
   
 
